Potential fix to fonts not showing correctly on ios

--- a/Resources/stylesheet.css
+++ b/Resources/stylesheet.css
@@ -34,7 +34,8 @@ header{
 h1{
     padding-top: 73vh;
     text-align: center;
-    font: normal normal 800 42px/52px Montserrat;
+    font: normal normal 800 42px/52px;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 0px;
     color: var(--cool-gray);
     opacity: 1;
@@ -46,7 +47,8 @@ h1{
 h2{
     text-align: center;
     text-decoration: underline;
-    font: normal normal bold 32px/39px Montserrat;
+    font: normal normal bold 32px/39px;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 0px;
     color: var(--cool-gray);
     opacity: 1;
@@ -54,7 +56,8 @@ h2{
 
 h3{
     text-align: left;
-    font: normal normal bold 32px/39px Montserrat;
+    font: normal normal bold 32px/39px;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 0px;
     color: var(--teal);
     opacity: 1;
@@ -63,7 +66,8 @@ h3{
 
 h4{
     text-align: left;
-    font: normal normal bold 20px/27px Noto Sans;
+    font: normal normal bold 20px/27px;
+    font-family: 'Noto Sans JP', sans-serif;
     letter-spacing: 0px;
     color: var(--light-green);
     opacity: 1;
@@ -71,7 +75,7 @@ h4{
 }
 
 h5{
-    font-family: Helvetica, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     margin: 0%;
     margin-bottom: 22px;
     color: var(--text);
@@ -81,7 +85,8 @@ h5{
 h6{
     text-align: left;
     text-decoration: underline;
-    font: normal normal bold 14px/19px Noto Sans;
+    font: normal normal bold 14px/19px;
+    font-family: 'Noto Sans JP', sans-serif;
     letter-spacing: 0px;
     color: var(--text);
     opacity: 1;
@@ -91,7 +96,7 @@ h6{
 
 p{
     text-align: left;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     color: var(--text);
     font-size: 16px;
     margin-left: 5%;
